Update business name and description in index.html

--- a/index.html
+++ b/index.html
@@ -28,8 +28,8 @@
 </head>
 <body>
   <div class="box">
-    <h1>Local Business</h1>
-    <p>We provide reliable services to our clients.</p>
+    <h1>Barber Shop</h1>
+    <p>Clean, simple site for modern barbers.</p>
     <a href="#">Contact Us</a>
   </div>
 </body>
